knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporation_and_Tax_Information__c/Corporation_and_Tax_Information__c.object-meta.xml
<CustomObject>
    <label>Corporation and Tax Information</label>
    <nameField>
        <displayFormat>CTI-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corporation and Tax Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>