knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporation_and_Tax_Information__c/fields/Clinician__c.field-meta.xml
<CustomField>
    <fullName>Clinician__c</fullName>
    <label>Clinician</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Corporation and Tax Information</relationshipLabel>
    <relationshipName>Corporation_and_Tax_Information</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>