knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporation_and_Tax_Information__c/fields/Corporate_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Tax_ID__c</fullName>
    <label>Corporate Tax ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>