knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporation_and_Tax_Information__c/fields/Corporation_Address__c.field-meta.xml
<CustomField>
    <fullName>Corporation_Address__c</fullName>
    <label>Corporation Address</label>
    <type>Address</type>
</CustomField>