knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporation_and_Tax_Information__c/fields/Corporation_Name__c.field-meta.xml
<CustomField>
    <fullName>Corporation_Name__c</fullName>
    <label>Corporation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>