knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporation_and_Tax_Information__c/fields/State_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>State_of_Incorporation__c</fullName>
    <label>State of Incorporation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StateGlobalPicklist</valueSetName>
    </valueSet>
</CustomField>