knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporation_and_Tax_Information__c/fields/Tax_Classification__c.field-meta.xml
<CustomField>
    <fullName>Tax_Classification__c</fullName>
    <label>Tax Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual/sole proprietor or Single-Member LLC</fullName>
            </value>
            <value>
                <fullName>C Corporation</fullName>
            </value>
            <value>
                <fullName>S Corporation</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Trust/Estate</fullName>
            </value>
            <value>
                <fullName>Limited Liability Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>